# NeuralForge

./: .clinerules  .gitignore  ARCHITECTURE.md  INSTALLATION.md  NEURALFORGE_AUDIT_REPORT.md  OPENHANDS_HANDOFF.md  PROJECT_STATE.md  README.md  RELEASE_NOTES.md  ROADMAP.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  blueprint.md  package-lock.json  package.json  src-t
.claude/: launch.json
app/: globals.css  layout.tsx  page  page.tsx
components/: AgentPanel.tsx  AgentWorkbench.tsx  BootstrapManager.tsx  BootstrapPanel.tsx  ChatPane.tsx  CouncilPanel.tsx  Editor.tsx  EditorPane.tsx  ExtensionsPanel.tsx  FileExplorer.tsx  GovernancePanel.tsx  LogViewer.tsx  P  PromptMaker.tsx  ProviderManager.tsx  SessionTabs.tsx  SettingsPanel.tsx  TabBar.tsx  TaskReportView.tsx  (+2 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_controller.rs  agent_v2.rs  change_executor.rs  context_retrieval.rs  error_analyzer.rs  knowledge_store.rs  lib.rs  main.rs  multi_agent.rs  planning_engine.rs  release_validation.rs  task_orchestrator.rs  terminal_executor.rs  workspace_scanner.rs
src-tauri/src/agent/: executor.rs  memory.rs  mod.rs  planner.rs
src-tauri/src/agent_core/: commands.rs  lifecycle.rs  mod.rs  orchestrator.rs  reducer.rs  registry.rs  service.rs  types.rs
src-tauri/src/ai/: autocomplete.rs  benchmarks.rs  cache.rs  completion.rs  composer.rs  context.rs  credential_store.rs  docs.rs  git.rs  health.rs  inline.rs  mod.rs  model_manager.rs  provider_registry.rs  provider_router.rs  router.rs  web.rs
src-tauri/src/ai/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai_compatible.rs
src-tauri/src/bootstrap/: diff.rs  environment.rs  git.rs  mod.rs  selfanalyze.rs  suggest.rs
src-tauri/src/core/: build_info.rs  config.rs  errors.rs  events.rs  logging.rs  mod.rs  state.rs
src-tauri/src/database/: indexer.rs  mod.rs  resolver.rs  search.rs  sessions.rs
src-tauri/src/extensions/: api.rs  loader.rs  manifest.rs  mod.rs
src-tauri/src/filesystem/: mod.rs
src-tauri/src/governance/: evidence.rs  ledger.rs  mod.rs  promotion.rs  requirements.rs  validator.rs
src-tauri/src/hardware/: cpu.rs  gpu.rs  memory.rs  mod.rs
src-tauri/src/intelligence/: context.rs  gateway.rs  matcher.rs  mod.rs  registry.rs  reliability.rs  router.rs
src-tauri/src/parsers/: mod.rs
src-tauri/src/performance/: arena_v5.rs  mod.rs  soak_test.rs  viewport.rs
src-tauri/src/planning/: dag.rs  mod.rs  planner.rs
src-tauri/src/services/: hash_service.rs  mod.rs  scheduler_service.rs  watcher_service.rs  workspace_service.rs
src-tauri/src/terminal/: mod.rs
src-tauri/src/workspace/: chunker.rs  embeddings.rs  mod.rs  search.rs
(+72 files in other folders)
