[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
futures-util = "0.3"
sysinfo = "0.32"
rusqlite = { version = "0.32", features = ["bundled-full"] }
walkdir = "2"
sha2 = "0.10"
specta = { version = "1.0.5", features = ["export"] }
regex = "1.13.0"
lazy_static = "1.5.0"
once_cell = "1.21.4"
fastembed = "5.17.2"
html2md = "0.2.15"
scraper = "0.27.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Foundation",
] }
